--- a/cadastro.html
+++ b/cadastro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cadastro</title>
+    <title>Cadastro</title>
 </head>
 <body>
     <h1>Cadastro</h1>
@@ -11,7 +11,7 @@
     <form action=""></form>
 Nome:
     <br>
-    <input type="text" name="nome"
+    <input type="text" name="nome">
     <br><br>
 Sexo biológico:
 <br>
@@ -21,10 +21,60 @@ Sexo biológico:
 <br><br>
 Data de nascimento:
 <br>
-<input type="date" name="dataNascimento"
+<input type="date" name="dataNascimento">
 
 
 <h2>Interesses</h2>
+<br>
+<input type="checkbox" name="Interesses">Séries
+<br>
+<input type="checkbox" name="Interesses">Filmes
+<br>
+<input type="checkbox" name="Interesses">Animes
+<br>
+<input type="checkbox" name="Interesses">Desenhos
+
+<h3>Estado</h3>
+<select name="estado">
+    <option value="SP">SP</option>
+    <option value="RJ">RJ</option>
+    <option value="DF">DF</option>
+    <option value="AC">AC</option>
+    <option value="AL">AL</option>
+    <option value="AP">AP</option>
+    <option value="AM">AM</option>
+    <option value="BA">BA</option>
+    <option value="CE">CE</option>
+    <option value="ES">ES</option>
+    <option value="GO">GO</option>
+    <option value="MA">MA</option>
+    <option value="MT">MT</option>
+    <option value="MS">MS</option>
+    <option value="MG">MG</option>
+    <option value="PA">PA</option>
+    <option value="PB">PB</option>
+    <option value="PR">PR</option>
+    <option value="PE">PE</option>
+    <option value="PI">PI</option>
+    <option value="RN">RN</option>
+    <option value="RS">RS</option>
+    <option value="RO">RO</option>
+    <option value="RR">RR</option>
+    <option value="SC">SC</option>
+    <option value="SE">SE</option>
+    <option value="TO">TO</option>
+    </select>
+
+    <h3>Observação</h3>
+    <textarea name=""></textarea>
+    <br><br>
+    <input type="submit" value="cadastro">
+</form>
+
+<form action="">
+    <input type="file" accept="image/">
+    
+
 
 </form>
 
